[CHKT-1049] Added ipay88 wrapper, [CHKT-1067] Handle new client token… (#367)
* [CHKT-1049] Added ipay88 wrapper, [CHKT-1067] Handle new client token data

* [CHKT-1068] Added iPay88 analytics (#368)

* [CHKT-1068] Added iPay88 analytics

* [CHKT-1069] Added iPay88 validation

* [CHKT-1064] Added Unit tests for validation

* [CHKT-1064] Updated example app and SDK for iPay88 UI tests

--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="loading">Loading...</string>
     <string name="tokenize">Tokenize</string>
 
-    <string name="huc_ui">HUC (UI)</string>
+    <string name="huc_ui">Headless SDK</string>
     <string name="huc_raw">HUC (RAW)</string>
 
     <string name="previous">Previous</string>
