CHKT-1385 Adding option for vaulted PrimerSessionIntents (#404)
* Adding button group for selecting intent type to fragment_headless.xml and also remaining it from fragment_third.xml to make it more verbose

* Fixing issues with binding

* Hooking up typeButtonGroup to the HeadlessComponentsFragment.kt for setting of the PrimerSessionIntent and cleaning up the onViewCreated() function.

* Ensuring correct value is set when typeButtonGroup is selected

* Implemented Headless Vault Manager

* Headless CVV recapture (#400)

* [CHKT-1357] Added Headless CVV Recapture

* Added Vault Manager test app

* Changing analytic id field on PaymentMethodVaultTokenInternal.kt to match what the backend returns

* Adding button group for selecting intent type to fragment_headless.xml and also remaining it from fragment_third.xml to make it more verbose

* Fixing issues with binding

* Hooking up typeButtonGroup to the HeadlessComponentsFragment.kt for setting of the PrimerSessionIntent and cleaning up the onViewCreated() function.

* Ensuring correct value is set when typeButtonGroup is selected

* Implemented Headless Vault Manager

* Headless CVV recapture (#400)

* [CHKT-1357] Added Headless CVV Recapture

---------

Co-authored-by: Semir <semir@primer.io>
Co-authored-by: semirp <85510694+semirp@users.noreply.github.com>

--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
-<resources>
+<resources translatable="false">
     <string name="app_name">Primer Sample</string>
     <string name="title_activity_main">MainActivity</string>
 
     <!-- Strings used for fragments for navigation -->
     <string name="button_primer_sdk">Primer SDK</string>
-    <string name="loading">Loading...</string>
+    <string name="loading">Loading…</string>
     <string name="tokenize">Tokenize</string>
 
     <string name="huc_ui">Headless SDK</string>
