--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="payment_handling">Payment Handling</string>
     <string name="payment_handling_auto">AUTO</string>
     <string name="payment_handling_manual">MANUAL</string>
+    <string name="workflows_settings">Use legacy workflows</string>
     <string name="ui_settings_disable_init_screen">Disable init screen</string>
     <string name="env_production">Production</string>
     <string name="env_staging">Staging</string>
