feat: implement form with redirect payment manager, bank list with web redirect support, update iDeal, DotPay drop-in to use new payment manager (#467)
* feat: add Adyen-iDeal support in headless list of payment methods

* test: implement tests for AdyenIdealPaymentMethodDescriptor

* feat: fix typo in PrimerHeadlessSteppable, implement error and event logging delegates

* chore: refactor BanksFilterInteractor, BanksInteractor to use BaseSuspendInteractor instead of BaseFlowInteractor

* feat: implement GetBanksDelegate

* feat: implement BankIssuerTokenizationDelegate

* feat: implement PrimerHeadlessFormComponent, FormCollectableData, BanksCollectableData, BanksStep

* feat: implement BanksComponent

* fix: fix AnalyticsInteractor resolution

* feat: implemented PrimerHeadlessUniversalCheckoutFormWithRedirectManager

* feat: implement Adyen-iDeal headless example screen

* feat: use form with redirect payment method manager in Drop-in iDeal and DotPay implementations

* chore: removed Git Toolbox configuration

* chore: update ProGuard rules to exclude new payment manager and related classes from obfuscation

* chore: update ProGuard rules to exclude IssuingBank from obfuscation

* feat: implement bank search in drop-in iDeal UI

* fix: collect analytics interactor via IO dispatcher to avoid blocking the main thread

* chore: debounce collection in BanksComponent

* test: update BanksComponentTest to account for collection debounce

* feat: implement bank search in sample headless iDeal UI

* chore: log analytics events after loading banks and after tokenization to avoid slowdown

* test: fix test in BanksComponentTest

* feat: implement WebRedirectDelegate and unit tests

* feat: implement WebRedirectLoggingDelegate and unit tests

* feat: implement WebRedirectComponent and unit tests

* chore: rename payment manager and update provider function signature

* chore: rename 'formWithRedirect' package to 'component

--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -50,6 +50,11 @@
     <string name="universal_checkout_options">Universal Checkout Options</string>
     <string name="vault_manager_options">Vault Manager Options</string>
 
+    <string name="adyen_bank_selection_hint">Search banks</string>
+    <string name="adyen_bank_selection_title">Choose your bank</string>
+    <string name="adyen_bank_selection_load_error_text">Failed to load banks</string>
+    <string name="adyen_bank_selection_try_again_text">Try again</string>
+
     <string-array name="app_environments">
         <item>@string/env_sandbox</item>
         <item>@string/env_dev</item>
