feat: klarna headless payment manager (#478)
---------

Co-authored-by: FlaviuDuncaTW <flaviu@ext.primer.io>
Co-authored-by: FlaviuExtPrimer <149587774+FlaviuExtPrimer@users.noreply.github.com>

--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -54,6 +54,12 @@
     <string name="adyen_bank_selection_load_error_text">Failed to load banks</string>
     <string name="adyen_bank_selection_try_again_text">Try again</string>
 
+    <string name="klarna_title">Klarna session</string>
+    <string name="klarna_initialize_view_text">Initialize Klarna view</string>
+    <string name="klarna_authorize_text">Continue</string>
+
+    <string name="deeplink_return_activity_text">Deeplink return activity</string>
+
     <string-array name="app_environments">
         <item>@string/env_sandbox</item>
         <item>@string/env_dev</item>
