feat(CVV-recapture): Adds cvv recapture to drop in (#531)
* feat: adding initial layout and fragment for VaultedPaymentMethodsCvvRecaptureFragment

* chore: cleaning up validation logic

* feat: adding new payment method option

* chore: linting

* feat(CVV-recapture): Improved CVV recapture screen, added translations

* chore: linting fixes

* style: fixed translations placeholder type

* chore: added analytics events

* style: linting

---------

Co-authored-by: semirp <85510694+semirp@users.noreply.github.com>
Co-authored-by: Semir <semir@primer.io>

--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="payment_handling_manual">MANUAL</string>
     <string name="workflows_settings">Use legacy workflows</string>
     <string name="ui_settings_disable_init_screen">Disable init screen</string>
+    <string name="ui_settings_enable_cvv_recapture">Enable CVV recapture flow</string>
     <string name="env_production">Production</string>
     <string name="env_staging">Staging</string>
     <string name="env_dev">Dev</string>
