--- a/primer-sdk-android/src/main/res/values-zh-rHK/strings.xml
+++ b/primer-sdk-android/src/main/res/values-zh-rHK/strings.xml
@@ -135,5 +135,9 @@
     <string name="uploadScreenshot">上傳截圖到你的銀行流動應用程式</string>
     <string name="primer_payment_method_button_content_description">Pay with %s</string>
     <string name="loading_text">Loading</string>
-    <string name="continue_button">Continue</string>
+    <string name="continue_button">繼續</string>
+    <!-- CVV- CVV recapture explanation label -->
+    <string name="primer_cvv_recapture_explanation">輸入信用卡上的 %d 位數安全碼，進行安全付款。</string>
+    <!-- CVV - CVV recapture screen title -->
+    <string name="primer_cvv_recapture_title">輸入 CVV 安全碼</string>
 </resources>
