--- a/primer-sdk-android/src/main/res/values-el/strings.xml
+++ b/primer-sdk-android/src/main/res/values-el/strings.xml
@@ -131,5 +131,10 @@
     <string name="card_expiry_formatted">Expiry (MM/YY)</string>
     <string name="primer_payment_method_button_content_description">Pay with %s</string>
     <string name="loading_text">Loading</string>
-    <string name="continue_button">Continue</string>
+    <string name="continue_button">Συνέχεια</string>
+
+    <!-- CVV- CVV recapture explanation label -->
+    <string name="primer_cvv_recapture_explanation">Κάνε εισαγωγή του κωδικού ασφάλειας %d της κάρτας σου για ασφαλή πληρωμή.</string>
+    <!-- CVV - CVV recapture screen title -->
+    <string name="primer_cvv_recapture_title">Εισαγωγή του Κωδικού Ασφάλειας</string>
 </resources>
