--- a/primer-sdk-android/src/main/res/values-es/strings.xml
+++ b/primer-sdk-android/src/main/res/values-es/strings.xml
@@ -131,5 +131,10 @@
     <string name="card_expiry_formatted">Expiry (MM/YY)</string>
     <string name="primer_payment_method_button_content_description">Pay with %s</string>
     <string name="loading_text">Loading</string>
-    <string name="continue_button">Continue</string>
+    <string name="continue_button">Continuar</string>
+
+    <!-- CVV- CVV recapture explanation label -->
+    <string name="primer_cvv_recapture_explanation">Introduzca el código de seguridad de %d dígitos de su tarjeta para hacer un pago seguro.</string>
+    <!-- CVV - CVV recapture screen title -->
+    <string name="primer_cvv_recapture_title">Introducir CVV</string>
 </resources>
