--- a/primer-sdk-android/src/main/res/values-nl/strings.xml
+++ b/primer-sdk-android/src/main/res/values-nl/strings.xml
@@ -131,5 +131,9 @@
     <string name="card_expiry_formatted">Expiry (MM/YY)</string>
     <string name="primer_payment_method_button_content_description">Pay with %s</string>
     <string name="loading_text">Loading</string>
-    <string name="continue_button">Continue</string>
+    <string name="continue_button">Doorgaan</string>
+    <!-- CVV- CVV recapture explanation label -->
+    <string name="primer_cvv_recapture_explanation">Voer de %d-cijferige beveiligingscode op uw kaart in voor een veilige betaling.</string>
+    <!-- CVV - CVV recapture screen title -->
+    <string name="primer_cvv_recapture_title">Voer CVV in</string>
 </resources>
