--- a/primer-sdk-android/src/main/res/values-th/strings.xml
+++ b/primer-sdk-android/src/main/res/values-th/strings.xml
@@ -142,5 +142,9 @@
     <string name="uploadScreenshot">อัปโหลดภาพหน้าจอในแอปธนาคารของคุณ</string>
     <string name="primer_payment_method_button_content_description">Pay with %s</string>
     <string name="loading_text">Loading</string>
-    <string name="continue_button">Continue</string>
+    <string name="continue_button">ดำเนินการต่อไป</string>
+    <!-- CVV- CVV recapture explanation label -->
+    <string name="primer_cvv_recapture_explanation">ป้อนรหัสรักษาความปลอดภัย %d หลักในบัตรของคุณเพื่อการชำระเงินที่ปลอดภัย</string>
+    <!-- CVV - CVV recapture screen title -->
+    <string name="primer_cvv_recapture_title">ป้อน CVV</string>
 </resources>
