--- a/primer-sdk-android/src/main/res/values-tr/strings.xml
+++ b/primer-sdk-android/src/main/res/values-tr/strings.xml
@@ -131,5 +131,9 @@
     <string name="card_expiry_formatted">Expiry (MM/YY)</string>
     <string name="primer_payment_method_button_content_description">Pay with %s</string>
     <string name="loading_text">Loading</string>
-    <string name="continue_button">Continue</string>
+    <string name="continue_button">Devam et</string>
+    <!-- CVV- CVV recapture explanation label -->
+    <string name="primer_cvv_recapture_explanation">Güvenli bir ödeme için kartınızdaki %d basamaklı güvenlik kodunu girin.</string>
+    <!-- CVV - CVV recapture screen title -->
+    <string name="primer_cvv_recapture_title">CVV gir</string>
 </resources>
