--- a/primer-sdk-android/src/main/res/values-zh-rCN/strings.xml
+++ b/primer-sdk-android/src/main/res/values-zh-rCN/strings.xml
@@ -145,5 +145,9 @@
     <string name="uploadScreenshot">在您的银行应用中上传屏幕截图</string>
     <string name="primer_payment_method_button_content_description">Pay with %s</string>
     <string name="loading_text">Loading</string>
-    <string name="continue_button">Continue</string>
+    <string name="continue_button">继续</string>
+    <!-- CVV- CVV recapture explanation label -->
+    <string name="primer_cvv_recapture_explanation">输入卡上的 %d 位安全码以保障付款安全。</string>
+    <!-- CVV - CVV recapture screen title -->
+    <string name="primer_cvv_recapture_title">输入 CVV</string>
 </resources>
