fix: show success if PENDING and showSuccessCheckoutOnPendingPayment flag is true (#646)
* Redirect to success when status pending and flag passed in from response

* fix WebView swallowing the callback made by internal item

* Add translated strings

* Disable missing transaltion lint check

* Add missing tests for coverage

Ticket Link

--- a/primer-sdk-android/src/main/res/values-es/strings.xml
+++ b/primer-sdk-android/src/main/res/values-es/strings.xml
@@ -153,4 +153,7 @@
     <string name="session_complete_payment_failure_title">Payment failed</string>
     <string name="session_complete_payment_cancellation_title">Payment cancelled</string>
 
+    <string name="payByImmediateTransfer">Pagar vía transferencia inmediata</string>
+    <string name="payBySmartTransfer">Pagar vía transferencia bancaria</string>
+
 </resources>
